--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+        <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-testbench-junit5</artifactId>
             <scope>test</scope>
@@ -125,6 +129,10 @@
             <id>production</id>
             <dependencies>
                 <!-- Exclude development dependencies from production -->
+                <dependency>
+					<groupId>org.postgresql</groupId>
+					<artifactId>postgresql</artifactId>
+				</dependency>
                 <dependency>
                     <groupId>com.vaadin</groupId>
                     <artifactId>vaadin-core</artifactId>
