--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>vaadin-testbench-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--<dependency>
+		   <groupId>com.vaadin.addon</groupId>
+		   <artifactId>locale</artifactId>
+		   <version>1.2.0</version>
+		</dependency>-->
+        
     </dependencies>
 
     <build>
